<resources>
    <string name="app_name">Connent Me</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="email">Email address</string>
    <string name="enter_email">Enter your Email address</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_phone_no">Enter your Phone No.</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter your Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="logged_in">You are logged in</string>
    <string name="logged_out">You are logged out</string>
    <string name="already_account">Already have an Account?</string>
    <string name="no_account">Don\'t have any account?</string>
    <string name="create_an_account">register</string>
    <string name="create_account">Create account</string>
    <string name="register">Register</string>
    <string name="clienID">998714741074-jl6qf3bes7cnac3on4rpolqnedouptpv.apps.googleusercontent.com</string>
</resources>